redis/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-ha
  labels:
    app: redis
